--- a/estilos.css
+++ b/estilos.css
@@ -17,6 +17,9 @@ img.logo1, img.logo2 {
 img.logo2 {
     padding-bottom: 15px;
 }
+img.logo1:hover{
+
+}
 header .contenedor{
      display: flex;
     justify-content: space-between;
@@ -28,9 +31,17 @@ header a{
 header ul{
     display: flex;
     margin-top: 25px;
+
 }
 header ul li{
-    margin-right: 12px;
+    margin-right: 15px;
+    text-align: center;
+
+}
+nav ul li a:hover{
+    font-size: 18px;
+    transition: 0.3s;
+    border-bottom: 4px solid #200303;
 }
 nav ul li a{
     color:#200303;
@@ -68,6 +79,8 @@ b.titulobanner {
     display: flex;
     justify-content: space-around;
     padding:30px;
+    margin-left: 50px;
+    margin-right: 50px;
     font-size: 20px;
     line-height:25px;
     text-align: center;
@@ -148,4 +161,60 @@ footer p{
 }
 ul.historia{
     list-style: circle;
+}
+
+/*SECCION "NUESTROS PRODUCTOS*/
+img.productos {
+    width: 450px;
+    padding: 25px;
+}
+
+/*SECCION "QUIENES SOMOS"*/
+.contenedor-quienessomos {
+    text-align: center;
+    margin: 0 70px;;
+    font-size: 24px;
+    font-weight: bold;
+}
+.quienessomos {
+    margin-bottom: 50px;
+    margin-top: -20px;
+}
+
+/*SECCION "CATALOGO"*/
+.catalogo {
+    display: inline-flex;
+    text-align: center;
+    margin: 20px;
+}
+.img-catalogo{
+    padding-left: 100px;
+    width: 700px;
+    height: 350px;
+}
+.img-catalogo:hover{
+    transition: 0.2s;
+    width: 725px;
+    height: 365px;
+    filter:drop-shadow(0 2px 5px rgba(0, 0, 0, 0.9));
+}
+.productos {
+    text-align: center;
+}
+
+/*SECCION "TENIS Y ROPA*/
+.contenedor-productos{
+    display: flex;
+    flex-wrap: wrap;
+}
+.item{
+    width: 50%;
+    text-align: center;
+}
+#cat img{
+    margin-top: 100px;
+    width: 350px;
+}
+#cat li{
+    margin: 0 50px;
 }
